--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <p>hi there my name is raghav kapoor !!!</p>
+    <p>hi there my name is raghav kapoor and i am from delhi pursuing btech from dheradun  !!!</p>
   </body>
 </html>
